fix: spacing on buttons

--- a/noahgiboney.app/src/app/page.css
+++ b/noahgiboney.app/src/app/page.css
@@ -187,11 +187,22 @@
   font-size: 1.1rem;
 }
 
+.button-container{
+  padding-top: 50px;
+}
+
 .button-container .button {
   text-decoration: none;
   color: #020203;
   margin: 10px;
   padding: 10px 20px;
   border: 1px solid #020203;
-  transition: all
+  transition: all 0.3s; /* Specify a duration for the transition */
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.button-container .button:hover {
+  background-color: #655699;
+  color: white;
 }
